Fixed incorrect h4 width
Squashed commit of the following:

commit c4aca68d76ce81c9882de15d6d98dd5dbf644841
Author: Jake Becker <jabecker@stanford.edu>
Date:   Tue Jan 18 00:04:10 2011 -0800

    Added back in exception handling I had forgotten I commented out.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -487,7 +487,7 @@ a:hover .zoomIcon {
 
 #curAlbumInfo { float: left; margin: 0 0 0 10px; width: 310px; }
 
-#curSong h4, #curArtist h4, #curAlbum h4 { display: inline-block; margin-bottom: 4px; font-size: 15px; width: 250px; }
+#curSong h4, #curArtist h4, #curAlbum h4 { display: inline-block; margin-bottom: 4px; font-size: 15px; }
 
 #curSong h4 { font-size: 20px; }
 
